# syfmt

./: CMakeLists.txt  LICENSE  format.h  format_test.cpp
doc/: get-started.md
include/: args.h  common.h  file_sink.h  format.h  registry-inl.h  registry.h  sink.h  stdout_sink.h  syfmt.h  value.h
scripts/: generateHCPP.py
src/: file_sink.cpp  registry.cpp  sink.cpp  stdout_sink.cpp  syfmt.cpp
test/: CMakeLists.txt  format_test.cpp
